Fix when title is too long and no thumbnail

--- a/src/scss/shadow-box.scss
+++ b/src/scss/shadow-box.scss
@@ -54,7 +54,7 @@
 
 .shadow-box > .content-wrapper-no-thumbnail
 {
-  margin-top: -50px;
+  margin-top: -20px;
 }
 
 .content-wrapper > .title
